[gd_scene load_steps=7 format=3 uid="uid://bamnvinmv5e6g"]

[ext_resource type="Texture2D" uid="uid://dpippmiepkyeb" path="res://decentraland_logo.png" id="1_rbo0n"]
[ext_resource type="Script" path="res://src/ui/components/wearable_panel/wearable_panel.gd" id="1_wjefq"]
[ext_resource type="Texture2D" uid="uid://cdkqwe4n7eu0a" path="res://assets/themes/icons/HideUIIcon.png" id="3_d0tom"]
[ext_resource type="PackedScene" uid="uid://cnabnesv3iw5v" path="res://src/ui/components/wearable_category/wearable_category.tscn" id="3_f2n7s"]
[ext_resource type="Texture2D" uid="uid://bgjf4umjbsjvm" path="res://assets/ui/BaseThumbnail.png" id="3_ylvgo"]
[ext_resource type="Theme" uid="uid://chwr8vock83p4" path="res://assets/themes/dark_dcl_theme/dark_dcl_theme.tres" id="6_qxxnb"]

[node name="WearablePanel" type="MarginContainer"]
offset_right = 292.0
offset_bottom = 250.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30
script = ExtResource("1_wjefq")

[node name="HBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 12
alignment = 1

[node name="Control" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TextureRect_ThumbnailBackground" type="TextureRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(180, 180)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_ylvgo")
expand_mode = 3

[node name="TextureRect_Preview" type="TextureRect" parent="HBoxContainer/TextureRect_ThumbnailBackground"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -75.0
offset_right = 75.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(90, 90)
texture = ExtResource("1_rbo0n")
expand_mode = 3
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer_Name" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Wearable_Category" parent="HBoxContainer/VBoxContainer/HBoxContainer_Name" instance=ExtResource("3_f2n7s")]
layout_mode = 2
size_flags_vertical = 4

[node name="Label_Name" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer_Name"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 18
text = "Name"

[node name="HBoxContainer_Hide" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect_Icon" type="TextureRect" parent="HBoxContainer/VBoxContainer/HBoxContainer_Hide"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("3_d0tom")
expand_mode = 2

[node name="Label_Hides" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer_Hide"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 12
text = "HIDES:"

[node name="Wearable_Category" parent="HBoxContainer/VBoxContainer/HBoxContainer_Hide" instance=ExtResource("3_f2n7s")]
layout_mode = 2

[node name="Control2" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="Button_Equip" type="Button" parent="HBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
theme = ExtResource("6_qxxnb")
toggle_mode = true
text = "EQUIP"

[connection signal="toggled" from="HBoxContainer/MarginContainer/Button_Equip" to="." method="_on_button_equip_toggled"]
